--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,8 @@ include_directories(
 ${PROJECT_SOURCE_DIR}
 ${PROJECT_SOURCE_DIR}/Thirdparty/ORBSLAM_2/include/
 ${PROJECT_SOURCE_DIR}/Thirdparty/BBS
+${PROJECT_SOURCE_DIR}/Thirdparty/libelas-for-hamlyn
+${PROJECT_SOURCE_DIR}/Thirdparty/libelas-for-hamlyn/src
 ${PROJECT_SOURCE_DIR}/Dataloaders
 ${PROJECT_SOURCE_DIR}/Modules/Common
 ${PROJECT_SOURCE_DIR}/Modules/GroundTruth
@@ -46,12 +48,12 @@ ${PROJECT_SOURCE_DIR}/Modules/Template
 ${PROJECT_SOURCE_DIR}/Modules/Tracking
 ${PROJECT_SOURCE_DIR}/Modules/Viewer
 ${EIGEN3_INCLUDE_DIR}
-${Pangolin_INCLUDE_DIRS}
+${Pangolin_INCLUDE_DIRS} 
 ${CERES_INCLUDE_DIRS}
-)
-
+) 
+ 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
-
+ 
 FILE(GLOB SRC_DEFSLAM_FILES
      "Modules/Common/*.cc"
      "Modules/GroundTruth/*.cc"
@@ -71,6 +73,7 @@ add_subdirectory(${PROJECT_SOURCE_DIR}/Thirdparty/BBS)
 add_subdirectory(${PROJECT_SOURCE_DIR}/Thirdparty/ORBSLAM_2)
 add_subdirectory(${PROJECT_SOURCE_DIR}/Modules/ToolsPCL)
 add_subdirectory(${PROJECT_SOURCE_DIR}/Dataloaders)
+add_subdirectory(${PROJECT_SOURCE_DIR}/Thirdparty/libelas-for-hamlyn)
 
 target_link_libraries(${PROJECT_NAME}
 ${OpenCV_LIBS}
@@ -82,6 +85,7 @@ g2o
 BBS
 ORBSLAM
 ToolsPCL
+libelas
 )
  
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Apps)
