--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ ${PROJECT_SOURCE_DIR}/Modules/Viewer
 ${EIGEN3_INCLUDE_DIR}
 ${Pangolin_INCLUDE_DIRS} 
 ${CERES_INCLUDE_DIRS}
+${OpenCV_INCLUDE_DIRS}
 ) 
  
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
