--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
 
 set(CMAKE_PREFIX_PATH "/home/jose/pytorch/torch/share/cmake")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
+add_compile_definitions(DEFAULTCALIBRATION="${PROJECT_SOURCE_DIR}/calibration_files/default.yalm")
 
 find_package(Torch REQUIRED)
 find_package(OpenCV 4.0.0 REQUIRED)
