--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.10.2 FATAL_ERROR)
 project(DeformableSLAM)
 
-#SET(CMAKE_BUILD_TYPE RELEASE)
+SET(CMAKE_BUILD_TYPE RELEASE)
 
 MESSAGE("Build type: " ${CMAKE_BUILD_TYPE})
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -Wall -O3 -march=native -fopenmp -Wno-deprecated-declarations" )
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall  -O3 -march=native -fopenmp -Wno-deprecated-declarations")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -Wall -O0 -march=native -fopenmp -Wno-deprecated-declarations" )
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall  -O0 -march=native -fopenmp -Wno-deprecated-declarations")
 
 # Check C++14 or C++0x support
 include(CheckCXXCompilerFlag)
@@ -28,7 +28,7 @@ endif()
 
 LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
 
-set(CMAKE_PREFIX_PATH "/home/user/Downloads/pytorch/torch/share/cmake")
+set(CMAKE_PREFIX_PATH "/home/jose/pytorch/torch/share/cmake")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
 add_compile_definitions(DEFAULTCALIBRATION="${PROJECT_SOURCE_DIR}/calibration_files/default.yaml")
 
